fixes for try-it .title selector spacing and remove important for finger declaration

--- a/css/ccap-statistics.less
+++ b/css/ccap-statistics.less
@@ -159,7 +159,7 @@
       /******************************************************
        * Try-It Feature styling/finger icon implementation
        ******************************************************/
-      >.title {
+      > .title {
         // counter-increment: exercise !important;
         content: "" " " counter(chapter, decimal) "." counter(example, decimal) " " "";
         color: @black;
@@ -171,10 +171,10 @@
 
       // place finger pointer before numbering and position properly
       &.finger {
-        >.title {
+        > .title {
           top: -3px;
           margin: 0;
-          height: 14px !important;
+          height: 14px;
 
           // This is one case where the finger icon is not added to the element that
           // has the `.finger` class.
